small spelling and style updates. Changed hero image to larger version. Changed parallax photo to png to try and fix issue with blurryness on iPhone

--- a/src/components/WhenSection/WhenSection.css
+++ b/src/components/WhenSection/WhenSection.css
@@ -62,7 +62,7 @@
 }
 
 .parallax{
-    background-image: url('../../static/photos/couple2.jpg');
+    background-image: url('../../static/photos/couple2.png');
     min-height: 50vh;
     background-attachment: fixed;
     background-position: center;
